[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Robot/Robot.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Map/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Map/Buildings/Hotel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Map/Buildings/Pressing.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/People/Depressed.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scripts/World.gd" type="Script" id=6]
[ext_resource path="res://src/Map/Buildings/LeSouffle.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Map/Buildings/Bookshop.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scripts/Scenography/MainCamera.gd" type="Script" id=9]
[ext_resource path="res://src/Map/Buildings/BigBuilding.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Map/Buildings/Lambdas/LambdaBuilding1.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Map/Buildings/Lambdas/LambdaBuilding2.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Map/Buildings/Lambdas/LambdaBuilding3.tscn" type="PackedScene" id=13]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="NavigationMesh" id=3]
vertices = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )
polygons = [ PoolIntArray( 0, 2, 4 ), PoolIntArray( 2, 6, 4 ), PoolIntArray( 1, 3, 5 ), PoolIntArray( 3, 7, 5 ), PoolIntArray( 8, 10, 12 ), PoolIntArray( 10, 14, 12 ), PoolIntArray( 9, 11, 13 ), PoolIntArray( 11, 15, 13 ), PoolIntArray( 16, 18, 20 ), PoolIntArray( 18, 22, 20 ), PoolIntArray( 17, 19, 21 ), PoolIntArray( 19, 23, 21 ) ]

[sub_resource type="NavigationMesh" id=4]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.819764, 1, 0.769703 )

[sub_resource type="BoxShape" id=8]

[node name="Outside" type="Spatial"]
script = ExtResource( 6 )

[node name="Navigation" type="Navigation" parent="."]

[node name="AreaHotel" type="MeshInstance" parent="Navigation"]
transform = Transform( 2.732, 0, 0, 0, 0, 0, 0, 0, 3.397, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation/AreaHotel"]
navmesh = SubResource( 3 )

[node name="Spots" type="Node" parent="Navigation/AreaHotel"]

[node name="1" type="Spatial" parent="Navigation/AreaHotel/Spots"]
transform = Transform( 2.73189, 0, 0, 0, 0, 0, 0, 0, 1.71892, -2.42254, 0, 1.33839 )

[node name="Robot" parent="Navigation" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.300475, 0.17, 2.15495 )

[node name="MainCamera" type="Camera" parent="Navigation/Robot"]
transform = Transform( 1, 0, 0, 0, 0.940514, 0.339756, 0, -0.339756, 0.940514, 0, 0, 0 )
size = 2.0
script = ExtResource( 9 )

[node name="Depressed" parent="Navigation" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.400037, 0.22, 1.90896 )

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.13403, 2.04389 )
visible = false
navmesh = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/NavigationMeshInstance"]
transform = Transform( 0.0806018, 0, 0, 0, 1, 0, 0, 0, 0.308388, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Navigation/NavigationMeshInstance/MeshInstance"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="Navigation/NavigationMeshInstance/MeshInstance/StaticBody"]
shape = SubResource( 6 )

[node name="Floor" parent="." instance=ExtResource( 2 )]

[node name="Buildings" type="Node" parent="."]

[node name="HotelArea" type="Node" parent="Buildings"]

[node name="LeSouffle" parent="Buildings/HotelArea" instance=ExtResource( 7 )]
transform = Transform( 0.970473, 0, 0.241211, 0, 1, 0, -0.241211, 0, 0.970473, -2.42314, 0.431363, -1.86468 )

[node name="Pressing" parent="Buildings/HotelArea" instance=ExtResource( 4 )]
transform = Transform( -0.323917, 0, -0.946085, 0, 1, 0, 0.946085, 0, -0.323917, 1.29784, 0, 0.979435 )

[node name="Hotel" parent="Buildings/HotelArea" instance=ExtResource( 3 )]
transform = Transform( -0.324545, 0, -0.94587, 0, 1, 0, 0.94587, 0, -0.324545, -0.0687726, 0, 0.813689 )

[node name="Bookshop" parent="Buildings/HotelArea" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32872, 0, 2.55084 )

[node name="BigBuildingArea" type="Node" parent="Buildings"]

[node name="BigBuilding" parent="Buildings/BigBuildingArea" instance=ExtResource( 10 )]
transform = Transform( 0.0152709, 0, -0.999883, 0, 1, 0, 0.999883, 0, 0.0152709, 1.65967, 1.18564, -2.93439 )

[node name="Lambdas" type="Node" parent="Buildings"]

[node name="LambdaBuilding1" parent="Buildings/Lambdas" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.46915, 0.850764, -1.09923 )

[node name="LambdaBuilding2" parent="Buildings/Lambdas" instance=ExtResource( 12 )]
transform = Transform( 0.115821, 0, -0.99327, 0, 1, 0, 0.99327, 0, 0.115821, -6.32007, 0.848924, 1.14688 )

[node name="LambdaBuilding3" parent="Buildings/Lambdas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.45112, 0.850056, -0.00673231 )

[node name="Scenography" type="Node" parent="."]

[node name="Areas" type="Node" parent="Scenography"]

[node name="Hotel" type="Area" parent="Scenography/Areas"]
transform = Transform( 0.492214, 0, 0, 0, 1, 0, 0, 0, 3.45201, -0.346243, 0, 2.37946 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Scenography/Areas/Hotel"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 7 )

[node name="BigBuilding" type="Area" parent="Scenography/Areas"]
transform = Transform( 3.03348, 0, 0, 0, 1, 0, 0, 0, 1.32491, 1.67369, 0, -1.43556 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Scenography/Areas/BigBuilding"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 7 )

[node name="Books" type="Area" parent="Scenography/Areas"]
transform = Transform( 0.595871, 0, 0, 0, 1, 0, 0, 0, 1, 2.31939, 0, 3.82265 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Scenography/Areas/Books"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 7 )

[node name="Marcys" type="Area" parent="Scenography/Areas"]
transform = Transform( 0.717867, 0, 0, 0, 0.2, 0, 0, 0, 2.2065, 0.965747, 0, 2.29637 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Scenography/Areas/Marcys"]
shape = SubResource( 8 )
[connection signal="body_entered" from="Scenography/Areas/Hotel" to="Navigation/Robot/MainCamera" method="_on_Hotel_body_entered"]
[connection signal="body_entered" from="Scenography/Areas/BigBuilding" to="Navigation/Robot/MainCamera" method="_on_BigBuilding_body_entered"]
[connection signal="body_entered" from="Scenography/Areas/Books" to="Navigation/Robot/MainCamera" method="_on_Books_body_entered"]
[connection signal="body_entered" from="Scenography/Areas/Marcys" to="Navigation/Robot/MainCamera" method="_on_Marcys_body_entered"]
